1.Fixed the bug when user refresh page and the navigation button still highlight `Home`. 2.Implemented Course component, including its subcomponent `listComponent` and logic of `add course`, `remove course`. 3.Modified layout of each page with flex layout, fixed the bug which page footer overlaps with body.

--- a/frontend/src/Index/Index.css
+++ b/frontend/src/Index/Index.css
@@ -1,21 +1,35 @@
-.layoutContainer{
-    height:100vh;
-    overflow: hidden;
+*{
+    font-family:"Microsoft Yahei";
+    font-size:15px;
 }
-.contentContainer{
-    padding:0 50px;
+.layoutContainer{
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    height:100vh;
 }
 .contentContainer-contentBox{
     height:100%;
     padding: 24px;
     background: #fff
 }
+.headerContainer{
+    height:10vh;
+}
 /* header-menu and ant-menu-item are CSS classes from ant-design framework*/
 .header-menu{
-    text-align: center;
+    height:100%; /* let the menu fill up the whole headerContainer*/
 }
-.ant-menu-item {
- flex-grow: 1;
+.header-menu li {
+    display: flex !important; /*Override the style of menu item*/
+    justify-content: center;
+    align-items: center;
+}
+.contentContainer{
+    padding:0 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 .footerContainer{
     z-index: 1000;
